# kallisto

./: README.md
electronics/: Kalisto_BOM.csv  Kalisto_CPL.csv
electronics/Gerber/: Kalisto-B_Cu.gbr  Kalisto-B_Mask.gbr  Kalisto-B_Paste.gbr  Kalisto-Edge_Cuts.gbr  Kalisto-F_Cu.gbr  Kalisto-F_Mask.gbr  Kalisto-F_Paste.gbr  Kalisto-F_Silkscreen.gbr  Kalisto-NPTH-drl_map.gbr  Kalisto-NPTH.drl  Kalisto-PTH-drl_map.gbr  Kalisto-PTH.drl
electronics/kicad/: Akula.kicad_pcb  Akula.kicad_pro  Akula.kicad_sch  Akula.net  akula_r.kicad_sch
src/: Cargo.toml
src/.cargo/: config.toml
src/components/: Cargo.toml
src/components/src/: at24c.rs  i2c.rs  lib.rs
src/components/src/keyboard/: key_matrix.rs  keyboard.rs  keyboard.rs.bak  mod.rs  types.rs
src/master/: Cargo.toml
src/master/src/: key_map.rs  main.rs
src/slave/: Cargo.toml
src/slave/src/: main.rs
