[package]
name = "kallisto-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp-pico = "0.7"
heapless = "0.7.9"
usbd-human-interface-device = "0.4.2"
num_enum = {version = "0.6.1", default-features = false}
