[package]
edition = "2021"
name = "kallisto-master"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-halt= "0.2.0"
defmt = "0.3"
smart-leds = "0.3.0"
ws2812-pio = "0.6.0"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fugit = "0.3.6"
rp-pico = "0.7"
kallisto-components = {path = "../components"}
heapless = "0.7.16"
usbd-human-interface-device = "0.4.2"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
